@@ -1,7 +1,8 @@
- $Id: ChangeLog,v 1.118 2005/06/25 10:26:59 uehira Exp $
+ $Id: ChangeLog,v 1.119 2005/06/25 12:09:25 uehira Exp $
 
 2005-06-25 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* ls8tel16_raw.c : bug fixed.
+	* ls8tel_STM.c : bug fixed.
 	* configure.in: added AC_C_CHAR_UNSIGNED
 	* Version 1.1.70 released.
 
